removed backface-visibility: hidden; resolve problem pixel by set correct height image

--- a/src/app/happening/components/application-wrapper/application-wrapper.component.scss
+++ b/src/app/happening/components/application-wrapper/application-wrapper.component.scss
@@ -48,7 +48,7 @@
       background-position: center top;
       background-image: url('src/assets/bubbles.png');
       background-color: color-base('red');
-      backface-visibility: hidden;
+
 
       @include respond-above('medium') {
       }
