--- a/src/app/happening/create-happening-page/create-happening-page.component.scss
+++ b/src/app/happening/create-happening-page/create-happening-page.component.scss
@@ -22,7 +22,7 @@
     &__image {
       background-image: url('src/assets/bubbles-shadow.png');
 
-      backface-visibility: hidden;
+
       width: 100%;
       height: 100px;
 
